--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -16,7 +16,7 @@
         android:id="@+id/typeOfTask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:prompt="@string/task_types_prompt" />
+        android:prompt="@string/filter_by_prompt" />
 
   	<edu.gatech.cs2340.triforce.chekableList xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="match_parent"
