Removed User. Edited/removed strings. Changed up some text.
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@192 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/view_task.xml
+++ b/TriforceApp/res/layout/view_task.xml
@@ -87,7 +87,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:text="@string/editTaskVT" />
+            android:text="@string/taskSaveButton" />
 
         <Button
             android:id="@+id/cancelVT"
