edited time and date. added imagebuttons. getting ready to display tasks
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@193 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/new_task_page.xml
+++ b/TriforceApp/res/layout/new_task_page.xml
@@ -68,17 +68,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
+            <TextView
+                android:id="@+id/dateDisplayNT"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Due Date: " />
+            
             <Button
                 android:id="@+id/pickDateNT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Due Date" />
-
-            <TextView
-                android:id="@+id/dateDisplayNT"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
         </TableRow>
 
         <TableRow
@@ -86,17 +86,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
+            <TextView
+                android:id="@+id/timeDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Time Due: " />
+            
             <Button
                 android:id="@+id/pickTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time Due" />
-
-            <TextView
-                android:id="@+id/timeDisplay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
         </TableRow>
     </TableLayout>
 
