--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Team Triforce (36) : list of tasks page -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,54 +14,66 @@
         android:text="@string/userTaskListHeader"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <Spinner
-        android:id="@+id/typeOfTask"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:prompt="@string/filter_by_prompt" />
-
-  	<edu.gatech.cs2340.triforce.chekableList xmlns:android="http://schemas.android.com/apk/res/android"
-    	android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:orientation="vertical">
-		
-		<CheckedTextView
-		    android:id="@+id/username"
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:ellipsize="marquee"
-		    android:gravity="center_vertical"
-		    android:singleLine="true"
-		    android:textAppearance="@string/app_name" />
-    
-		<TextView
-		    	android:id="@+id/enter"
-		    	android:layout_width ="fill_parent"
-		    	android:layout_height="wrap_content"
-		    	android:gravity="center_vertical"
-		    	android:ellipsize="marquee"
-		    	android:singleLine="true"
-		
-		/>
-    </edu.gatech.cs2340.triforce.chekableList>
-    <FrameLayout
-        android:id="@+id/frameLayout1"
+    <TableLayout
+        android:id="@+id/tableLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/newTaskButton"
-            android:layout_width="match_parent"
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <Spinner
+                android:id="@+id/typeOfTask"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:prompt="@string/filter_by_prompt" />
+
+            <Button
+                android:id="@+id/logoutButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/logoutMain" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <ImageButton
+                android:id="@+id/newTaskButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@android:drawable/ic_menu_add" />
+
+            <ImageButton
+                android:id="@+id/editTaskButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@android:drawable/ic_menu_edit" />
+
+            <ImageButton
+                android:id="@+id/delTaskButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@android:drawable/ic_menu_delete" />
+        </TableRow>
+        <!--
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:text="@string/newTaskButton" />
-
-    </FrameLayout>
-
-    <Button
-        android:id="@+id/logoutButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/logoutMain" />
+            android:text="@+id/label"
+            android:textSize="20px" >
+        </TextView>
+        -->
+    </TableLayout>
 
 </LinearLayout>
