--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -65,15 +65,13 @@
                 android:layout_weight="1"
                 android:src="@android:drawable/ic_menu_delete" />
         </TableRow>
-        <!--
-        <TextView
-            android:id="@+id/label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@+id/label"
-            android:textSize="20px" >
-        </TextView>
-        -->
     </TableLayout>
+
+    <ListView android:id="@android:id/list"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:background="#000000"
+               android:layout_weight="1"
+               android:drawSelectorOnTop="false"/>
 
 </LinearLayout>
