can add new tasks and are viewable, but you have to logoff and log back in to view them. fixing that is next priority.
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@195 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/new_task_page.xml
+++ b/TriforceApp/res/layout/new_task_page.xml
@@ -31,10 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:inputType="textCapWords" >
-
-        <requestFocus />
+        android:layout_marginTop="5dp" >
     </EditText>
 
     <TextView
@@ -49,8 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:inputType="textCapSentences" />
+        android:layout_marginTop="5dp" />
 
     <Spinner
         android:id="@+id/newTypeOfTask"
@@ -73,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Due Date: " />
-            
+
             <Button
                 android:id="@+id/pickDateNT"
                 android:layout_width="wrap_content"
@@ -91,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time Due: " />
-            
+
             <Button
                 android:id="@+id/pickTime"
                 android:layout_width="wrap_content"
