--- a/TriforceApp/res/layout/edit_task_page.xml
+++ b/TriforceApp/res/layout/edit_task_page.xml
@@ -4,111 +4,114 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/headerNT"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/headerET"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-    </LinearLayout>
+    <!-- Title "NEW TASK" -->
 
     <TextView
-        android:id="@+id/taskNamePromptNT"
+        android:id="@+id/headerET"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/headerET"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <!-- Tag asking for Task Name and its edit form -->
+
+    <TextView
+        android:id="@+id/taskNamePromptET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/taskNameNT"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <EditText
-        android:id="@+id/editTaskName"
+        android:id="@+id/editTaskNameET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:inputType="textCapWords" >
-
-        <requestFocus />
+        android:layout_marginTop="5dp" >
     </EditText>
 
+    <!-- Tag for Task Description and its edit form -->
+
     <TextView
-        android:id="@+id/descriptionPromptNT"
+        android:id="@+id/descriptionPromptET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/taskDescriptionNT"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <EditText
-        android:id="@+id/editTaskDescript"
+        android:id="@+id/editTaskDescriptET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:inputType="textCapSentences" />
+        android:layout_marginTop="5dp" />
+
+    <!-- Prompt for selecting the type of the task -->
 
     <Spinner
-        android:id="@+id/newTypeOfTask"
+        android:id="@+id/newTypeOfTaskET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:prompt="@string/task_types_prompt" />
 
     <TableLayout
-        android:id="@+id/tableDateTime"
+        android:id="@+id/tableDateTimeET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <TableRow
-            android:id="@+id/dateRow"
+            android:id="@+id/dateRowET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
+            <!-- Tag for Due Date of task and its button prompt -->
+
+            <TextView
+                android:id="@+id/dateDisplayET"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Due Date: " />
+
             <Button
-                android:id="@+id/pickDateNT"
+                android:id="@+id/pickDateET"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Due Date" />
-
-            <TextView
-                android:id="@+id/dateDisplayNT"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
         </TableRow>
 
         <TableRow
-            android:id="@+id/timeRow"
+            android:id="@+id/timeRowET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
+            <!-- Tag for Time Due of task and its button prompt -->
+
+            <TextView
+                android:id="@+id/timeDisplayET"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Time Due: " />
+
             <Button
-                android:id="@+id/pickTime"
+                android:id="@+id/pickTimeET"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time Due" />
-
-            <TextView
-                android:id="@+id/timeDisplay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
         </TableRow>
     </TableLayout>
 
+    <!-- Tag for Location of task and its edit form -->
+
     <TextView
-        android:id="@+id/locationPromptNT"
+        android:id="@+id/locationPromptET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/taskLocationNT"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <EditText
-        android:id="@+id/editLocation"
+        android:id="@+id/editLocationET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
@@ -116,13 +119,12 @@
         android:inputType="textPostalAddress" />
 
     <RelativeLayout
-        android:id="@+id/relativeLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left" >
 
         <Button
-            android:id="@+id/saveButtonNT"
+            android:id="@+id/saveButtonET"
             android:layout_width="157dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -132,7 +134,7 @@
             android:text="@string/taskSaveButton" />
 
         <Button
-            android:id="@+id/cancelButtonNT"
+            android:id="@+id/cancelButtonET"
             android:layout_width="156dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -140,13 +142,6 @@
             android:layout_marginBottom="30dp"
             android:layout_marginTop="30dp"
             android:text="@string/cancel" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="68dp" />
     </RelativeLayout>
 
 </LinearLayout>
