--- a/TriforceApp/res/layout/row_layout.xml
+++ b/TriforceApp/res/layout/row_layout.xml
@@ -3,21 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
+    <!-- Displays the Name of Task -->
+    
     <TextView
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@+id/label"
-        android:textSize="30px" >
+        android:textSize="30dp" >
     </TextView>
 
+    <!-- Displays the checkbox for the Task -->
+    
     <CheckBox
         android:id="@+id/check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="4px"
-        android:layout_marginRight="10px" >
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="10dp" >
     </CheckBox>
 
 </RelativeLayout>
