added exit button to viewDB
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@197 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/view_db.xml
+++ b/TriforceApp/res/layout/view_db.xml
@@ -6,7 +6,13 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <!-- Lists how the info is displayed -->
+    <!-- Exit button -->
+
+    <Button
+        android:id="@+id/exitViewDB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Exit User DB" />
 
     <TableLayout
         android:id="@+id/tableLayout1"
@@ -15,6 +21,8 @@
 
         <TableRow>
 
+            <!-- Lists how the info is displayed -->
+            
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
