--- a/TriforceApp/res/layout/row_layout.xml
+++ b/TriforceApp/res/layout/row_layout.xml
@@ -4,17 +4,18 @@
     android:layout_height="wrap_content" >
 
     <!-- Displays the Name of Task -->
-    
+
     <TextView
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:text="@+id/label"
-        android:textSize="30dp" >
+        android:textSize="20dp" >
     </TextView>
 
     <!-- Displays the checkbox for the Task -->
-    
+
     <CheckBox
         android:id="@+id/check"
         android:layout_width="wrap_content"
