--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical" >
 
     <!-- Title "TASK LIST" -->
-    
+
     <TextView
         android:id="@+id/titleTaskList"
         android:layout_width="wrap_content"
@@ -22,36 +22,12 @@
         android:layout_height="wrap_content" >
 
         <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <!-- Filter the tasks to be seen -->
-            
-            <Spinner
-                android:id="@+id/typeOfTask"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:prompt="@string/filter_by_prompt" />
-
-            <!-- Button for logout -->
-            
-            <Button
-                android:id="@+id/logoutButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/logoutMain" />
-        </TableRow>
-
-        <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
             <!-- Buttons for New, Edit, and Delete task -->
-            
+
             <ImageButton
                 android:id="@+id/newTaskButton"
                 android:layout_width="0dp"
@@ -60,11 +36,11 @@
                 android:src="@android:drawable/ic_menu_add" />
 
             <ImageButton
-                android:id="@+id/editTaskButton"
+                android:id="@+id/checkButton"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:src="@android:drawable/ic_menu_edit" />
+                android:src="@drawable/check_complete" />
 
             <ImageButton
                 android:id="@+id/delTaskButton"
@@ -73,15 +49,40 @@
                 android:layout_weight="1"
                 android:src="@android:drawable/ic_menu_delete" />
         </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <!-- Filter the tasks to be seen -->
+
+            <Spinner
+                android:id="@+id/typeOfTask"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:prompt="@string/filter_by_prompt" />
+
+            <!-- Button for logout -->
+
+            <Button
+                android:id="@+id/logoutButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/logoutMain" />
+        </TableRow>
     </TableLayout>
 
     <!-- View that displays the tasks -->
-    
-    <ListView android:id="@android:id/list"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:background="#000000"
-               android:layout_weight="1"
-               android:drawSelectorOnTop="false"/>
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="#000000"
+        android:drawSelectorOnTop="false" />
 
 </LinearLayout>
