--- a/TriforceApp/res/layout/row_layout.xml
+++ b/TriforceApp/res/layout/row_layout.xml
@@ -3,40 +3,39 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-    <!-- Displays the Name of Task -->
-
     <!-- Displays the checkbox for the Task -->
 
     <CheckBox
         android:id="@+id/check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="10dp" >
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true" >
     </CheckBox>
+
+    <!-- Displays the Edit Button -->
 
     <ImageButton
         android:id="@+id/edit_row_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="4dp"
         android:src="@android:drawable/ic_menu_edit" />
 
-    <!-- android:layout_alignBottom="@+id/check" -->
-    
+    <!-- Displays the Name of Task -->
+
     <TextView
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/edit_row_task"
-        android:text="@+id/label"
-        android:maxWidth="200dp"
+        android:layout_toRightOf="@+id/check"
         android:maxLength="40"
+        android:maxWidth="200dp"
+        android:text="@+id/label"
         android:textSize="20dp" />
 
 </RelativeLayout>
