--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -86,10 +86,17 @@
 
             <Button
                 android:id="@+id/filterTasksButton"
-                android:layout_width="fill_parent"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="3"
+                android:text="Filter Tasks" />
+
+            <ImageButton
+                android:id="@+id/showLocationsButton"
+                android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:text="Filter Tasks" />
+                android:src="@android:drawable/ic_menu_compass" />
             
         </TableRow>
     </TableLayout>
