--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -21,7 +21,7 @@
     <ImageView
         android:id="@+id/tforceLogo"
         android:layout_width="193dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="0.49"
         android:src="@drawable/tforce_app_logo" />
